creato le sezioni delle 3 foto

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.full-height-conteiner{
+    width: 500px;
+    height: 500px;
+    background-color: red;
+}
