--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Azeret Mono', monospace;
 }
 header ul li{
     font-weight: 700;
@@ -47,10 +47,15 @@ a{
 
 span{
     position: absolute;
-    top: 80%;
+    top: 85%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-weight: 700;
+    font-size: 30px;
+    width: 30%;
+    text-align: center;
+    
+    
 }
 
 #img-1 span, #img-2 span{
